--- a/package.json
+++ b/package.json
@@ -1,15 +1,30 @@
 {
-  "name": "cera",
+  "name": "material-sense-typescript",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.0.1",
+    "@material-ui/icons": "^4.0.1",
+    "@material-ui/lab": "^4.0.0-alpha.15",
+    "@material-ui/styles": "^4.0.1",
+    "@material-ui/types": "^4.0.1",
     "@types/jest": "24.0.13",
     "@types/node": "12.0.2",
+    "@types/numeral": "^0.0.25",
     "@types/react": "16.8.18",
     "@types/react-dom": "16.8.4",
+    "@types/react-router-dom": "^4.3.3",
+    "@types/react-swipeable-views": "^0.13.0",
+    "@types/recharts": "^1.1.16",
+    "numeral": "^2.0.6",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-router": "^5.0.0",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
+    "react-swipeable-views": "^0.13.3",
+    "react-swipeable-views-utils": "^0.13.3",
+    "recharts": "^1.6.2",
     "typescript": "3.4.5"
   },
   "scripts": {
